continued work on making IPATranscript immutable